objects/project_cloud__Financial_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Amount__c</fullName>
        <inlineHelpText>This field will show the total amount of the Financial Benefit.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Benefit_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defines the sub-area that this financial benefit is related to.</inlineHelpText>
        <label>Benefit Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Area__c.project_cloud__Area__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>project_cloud__Area__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Benefit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Area__c</referenceTo>
        <relationshipLabel>Financial Benefits</relationshipLabel>
        <relationshipName>Financial_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date__c</fullName>
        <inlineHelpText>This field will define the date of the Financial Benefit.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <inlineHelpText>This field will allow users to add a description about what the Financial Benefit is about.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <referenceTo>project_cloud__Project_Milestone__c</referenceTo>
        <relationshipLabel>Financial Benefits</relationshipLabel>
        <relationshipName>Financial_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will show what Project the Financial Benefit is related too.</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Financial Benefits</relationshipLabel>
        <relationshipName>Financial_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <inlineHelpText>This field will allow users to specify if the Financial Benefit record is Planned or Realized.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Realized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Benefit</label>
    <nameField>
        <displayFormat>FB-{00000000}</displayFormat>
        <label>Financial Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>